example for sprite icons

--- a/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-images/p-image.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-images/p-image.twig
@@ -9,3 +9,6 @@
 
 <h3>js</h3>
 Siehe src/ui/0-playground/p-images/index.js
+
+<h3>sprite icons</h3>
+<svg role="img"><use xlink:href="/assets/sprite.svg#example"/></svg>
