--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/_figure/figure.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/_figure/figure.twig
@@ -1,14 +1,15 @@
 {#
 style="display: block; width: 100%; max-width: 100%;"
 --> als inline style, damit das sofort da ist, ansonsten ist es nicht responsive
-additionalClass: optionale zusätzliche Klassen, wie z.B. .text-right
+additionalClassFigure:      optionale zusätzliche Klassen, wie z.B. .d-lg-none
+additionalClassFigcaption:  optionale zusätzliche Klassen, wie z.B. .text-right
 
 siehe: https://getbootstrap.com/docs/4.0/content/figures/
 #}
 
-<figure class="figure" style="display: block; width: 100%; max-width: 100%;">
+<figure class="figure {{ additionalClassFigure }}" style="display: block; width: 100%; max-width: 100%;">
     {% block figure %}{% endblock %}
     {% if metaData.description %}
-        <figcaption class="figure-caption {{ additionalClass }}">{{ metaData.description }}</figcaption>
+        <figcaption class="figure-caption {{ additionalClassFigcaption }}">{{ metaData.description }}</figcaption>
     {% endif %}
 </figure>
