--- a/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m27-hero/m27-hero.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m27-hero/m27-hero.twig
@@ -1,30 +1,39 @@
 {#
-componentBackgound: Wenn der Background fluid ist, dann wird er im Container gesetzt, ansonsten hier, in der Componente.
+tx_starter_background_fluid, tx_starter_background: Bei diesem CE kann kein Hintergrund gesetzt werden, daher gibt es hier auch kein componentBackgound, wie in anderen CEs.
 #}
 
-{% set componentBackgound = tx_starter_background_fluid ? '' : tx_starter_background %}
+{% set tx_starter_background_fluid = false %}
+{% set tx_starter_background = false %}
 
 {% extends '@component/containers/container.twig' %}
 
 {% block moduleContentBlock %}
 
-    <div id="c{{ uid }}" class="m-{{ CType }} {{ componentBackgound }}">
-
-        {% include '@component/module/moduleheaders/moduleheader.twig' with {
-            'date': date,
-            'header': header,
-            'subheader': subheader,
-            'overline': overline,
-        } only %}
-
+    <div id="c{{ uid }}" class="m-{{ CType }} position-relative overflow-hidden">
+        
         {% include '@object/pictures/picture.twig' with image.small|merge({'additionalClassPicture': 'd-md-none'}) only %}
         {% include '@object/pictures/picture.twig' with image.medium|merge({'additionalClassPicture': 'd-md-only'}) only %}
         {% include '@object/pictures/picture.twig' with image.large|merge({'additionalClassPicture': 'd-lg-from'}) only %}
 
-        {% include '@component/module/modulefooters/modulefooter.twig' with {
-            'tx_starter_cta_link': tx_starter_cta_link,
-            'tx_starter_cta_text': tx_starter_cta_text,
-        } only %}
+        {% if bodytext or date or header or overline or subheader or tx_starter_cta_link %}
+            <div class="m-{{ CType }}__overlay m-t-3 m-t-md-0 p-md-3">
+                {% include '@component/module/moduleheaders/moduleheader.twig' with {
+                    'date': date,
+                    'header': header,
+                    'subheader': subheader,
+                    'overline': overline,
+                } only %}
+
+                {% include '@object/rtes/rte.twig' with {
+                    'rte': bodytext
+                } only %}
+
+                {% include '@component/module/modulefooters/modulefooter.twig' with {
+                    'tx_starter_cta_link': tx_starter_cta_link,
+                    'tx_starter_cta_text': tx_starter_cta_text,
+                } only %}
+            </div>
+        {% endif %}
 
     </div>
 
