--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/cards/card.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/cards/card.twig
@@ -1,10 +1,56 @@
+{#
+Diese Komponente wird überall verwendet, wo es ein Accordion gibt.
+see: src/ui/3-modules/m26-accordion
+
+see: https://getbootstrap.com/docs/5.0/components/accordion/
+see: https://getbootstrap.com/docs/5.0/components/collapse/
+
+itemUid:        uid eines Accordion Item
+toggle:         Schalter, ob ein Item geöffnet bleibt, wenn sich ein anderes öffnet, oder nicht
+uid:            uid des CE, daraus wird eine uid für das Accordion erzeugt
+grid:           Für ein Item: Optionen für TextMedia, also wenn ein Item Bild und Text hat
+image:          Für ein Item: das Bild
+imageorient:    Für ein Item: Bildausrichtung für TextMedia (inside, beside, links, rechts)
+text:           Für ein Item: der Text
+title:          Für ein Item: der Titel
+#}
+
+{% set uid = 'acc' ~ uid %}
+
 <div class="card">
-	<div class="card-header">
-		Featured
-	</div>
+	{% if category or date %}
+		<div class="card-header">
+			{% include '@object/categorys/category.twig' with {
+				text: category,
+			} only %}
+			{% include '@object/dates/date.twig' with {
+				'date': date,
+			} only %}
+		</div>
+	{% endif %}
 	<div class="card-body">
-		<h5 class="card-title">Special title treatment</h5>
-		<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-		<a href="#" class="btn btn-primary">Go somewhere</a>
+		{% embed '@object/links/link.twig' with link|merge({ noSpanIfNoLink: true }) %}
+			{% block linkContent %}
+				{% include '@object/pictures/picture.twig' with image only %}
+			{% endblock %}
+		{% endembed %}
+		{% include '@object/headings/heading.twig' with {
+			header: header,
+			header_layout: 5,
+		} only %}
+        {% include '@object/subheaders/subheader.twig' with {
+			subheader: subheader,
+		} only %}
+		{% include '@object/rtes/rte.twig' with {
+			'rte': text
+		} only %}
 	</div>
+	{% if link and link_text %}
+		<div class="card-footer">
+			{% include '@object/buttons/button.twig' with {
+				'link': link,
+				'text': link_text,
+			} only %}
+		</div>
+	{% endif %}
 </div>
