--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/picture.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/picture.twig
@@ -37,7 +37,7 @@ siehe:          https://getbootstrap.com/docs/4.0/content/images/ (beachte auch 
                 alt="{{ metaData.alternative }}"
                 title="{{ metaData.title }}"
                 data-sizes="auto"
-                class="o-image figure-img img-fluid lazyload {{ additionalClass }}"
+                class="o-image figure-img img-fluid lazyload {{ additionalClassImg }}"
                 style="display: block; width: 100%; max-width: 100%;"
             />
         </picture>
