--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/carousels/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/carousels/_index.scss
@@ -1,1 +1,12 @@
-// code
+/*
+see: https://swiperjs.com/
+
+$themeColor: Übergibt die Theme-Farbe an den Swiper, see: node_modules/swiper/swiper-vars.scss
+*/
+
+/* stylelint-disable-next-line scss/dollar-variable-pattern */
+$themeColor: blue;
+
+@import '/node_modules/swiper/swiper.scss';
+@import '/node_modules/swiper/modules/navigation/navigation.scss';
+@import '/node_modules/swiper/modules/pagination/pagination.scss';
