--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-beside/textmedia-beside.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-beside/textmedia-beside.twig
@@ -11,7 +11,7 @@ thisAlignX:     Bild links oder rechts ... default: Bild links.
             'rte': bodytext
         } only %}
     </div>
-    <div class="col-{{ thisGridImageColsSmall|default(12) }} col-md-{{ grid.imageCols.medium|default(3) }} col-lg-{{ grid.imageCols.large|default(6) }}
+    <div class="col-{{ thisMediaSizeSmall|default(12) }} col-md-{{ media_size_medium|default(3) }} col-lg-{{ media_size_large|default(6) }}
                 {{ thisImageHideOnSmall }} {{ thisImageHideOnMedium }} {{ thisImageHideOnLarge }} mt-3 mt-md-0">
         {% include '@object/pictures/picture.twig' with image only %}
     </div>
