--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/textmedia.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/textmedia.twig
@@ -1,15 +1,14 @@
 {#
-Diese Komponente wird überall verwendet, wo es ein Accordion gibt.
 see: src/ui/3-modules/m03-textmedia
 see: src/ui/2-components/accordions/_accordion-body/accordion-body.twig
 
-imageorient.inside:     Bild im Text oder neben dem Text, default: neben dem Text.
-thisGridImageColsSmall: Backendseitig kann auch eine 0 kommen, was 12 bedeutet.
+imageorient.inside: Bild im Text oder neben dem Text, default: neben dem Text.
+thisMediaSizeSmall: Backendseitig kann auch eine 0 kommen, was 12 bedeutet.
 
 thisImageHideOnSmall, thisImageHideOnMedium, thisImageHideOnLarge: Verbigt Bilder für bestimmte Breakpoints.
 #}
 
-{% set thisGridImageColsSmall = grid.imageCols.small == 0 ? 12 : grid.imageCols.small %}
+{% set thisMediaSizeSmall = media_size_small == 0 ? 12 : media_size_small %}
 {% set thisImageHideOnSmall = grid.showOnSmall ? '' : 'd-xs-none-only d-sm-none-only' %}
 {% set thisImageHideOnMedium = grid.showOnMedium ? '' : 'd-md-none-only' %}
 {% set thisImageHideOnLarge = grid.showOnLarge ? '' : 'd-lg-none-only d-xl-none-only d-xxl-none-only' %}
