--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-beside/textmedia-beside.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-beside/textmedia-beside.twig
@@ -14,7 +14,7 @@ thisAlignX:     Bild links oder rechts ... default: Bild links.
     <div class="col-{{ thisMediaSizeSmall|default(12) }} col-md-{{ media_size_medium|default(3) }} col-lg-{{ media_size_large|default(6) }}
                 {{ thisImageHideOnSmall }} {{ thisImageHideOnMedium }} {{ thisImageHideOnLarge }} mt-3 mt-md-0">
         {% include '@component/medias/media.twig' with {
-            items: items,
+            assets: assets,
             grid: grid,
         } only %}
     </div>
