--- a/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m05-media/m05-media.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m05-media/m05-media.twig
@@ -13,12 +13,12 @@ componentBackground: Wenn der Background fluid ist, dann wird er im Container ge
         {% include '@component/module/moduleheaders/moduleheader.twig' with {
             date: date,
             header: header,
-            subheader: subheader,
             overline: overline,
+            subheader: subheader,
         } only %}
 
         {% include '@component/medias/media.twig' with {
-            items: items,
+            assets: assets,
             grid: grid,
         } only %}
 
